dts/testData/inspections/container/RootProperty.dts
<error descr="Not a valid root entry">prop</error> = "value";

prop = "value";